Fix firefox layout issue

--- a/public/stylesheets/chopped.css
+++ b/public/stylesheets/chopped.css
@@ -55,7 +55,7 @@ div#header-text {
   position:relative;
   top: -78px;
   left: 20px;
-  width: 273px;
+  width: 275px;
   float: left;
   height: 0;
 
